# libsensors

./: CMakeLists.txt  README.md
include/: libsensors.h
src/: main.cpp
src/libsensors/: libsensors.cpp
src/sensors-decode/: main.cpp
src/sensors-preview/: main.cpp
